--- a/Review_LLMS (1).ipynb
+++ b/Review_LLMS (1).ipynb
@@ -51,7 +51,7 @@
       "source": [
         "Login into HuggingFace to download the Repo for Codellama\n",
         "\n",
-        "Hugging face token: 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"
+        "Hugging face token:"
       ]
     },
     {
